--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <meta name="author" content="Find Insurance Quotes">
 
-    <meta name="description" content="find-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
+    <meta name="description"
+        content="find-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
 
     <title>Find Insurance Quotes</title>
 
@@ -20,13 +21,14 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption|PT+Serif" rel="stylesheet">
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- UI3 -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/ui3-1.0.min.css">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
 
 </head>
 
@@ -34,47 +36,42 @@
 
     <main id="page">
 
-        <header>
-            <h1 class="seo-title padding-16">Find Insurance Quotes</h1>
-        </header>
+        <nav id="navbar-empty"></nav>
 
-        <section class="section padd-64">
+        <section class="section padd-64 deep-both-3">
             <div class="grid set-cols-1">
-
-                <div class="column center-vertical-between">
-                    <h3>STOP WORRYING ABOUT YOUR HEALTHCARE NEEDS WE’RE HERE TO HELP</h3>
-                    <p> <small>  Finding the perfect health insurance policy doesn’t need to be frustrating or time-consuming. In fact, it can be as quick and easy as purchasing anything else online. At Prestige Health Advisors, we simplify the health insurance shopping process by pairing you with a licensed health insurance agent who will find affordable coverage options that match your needs and budget.</small></p>
-                    <a class="button large text-white" href="https://mystifying-hodgkin-910950.netlify.com/">Get a Quote</a>
+                <div class="column header-title">
+                    <h1>Health Insurance for Individuals & Families</h1>
                 </div>
             </div>
         </section>
 
-        <section class="section deep-tertiary padd-64">
+        <section class="section padd-8">
             <div class="grid set-cols-3">
 
-                <div class="column fullrow homeheadline">
-                    <h3>Worried about rising healthcare costs Flexible coverage options for any budget</h3>
-                    <p>At Prestige Health Advisors, we understand finding the right coverage can be overwhelming, but it doesn’t have to be. We’ve created an easy 3 step process to help you find an affordable healthcare, right for you!</p>
+                <div class="column center-vertical-between min-height-200">
+                    <i class="fab fa-wpforms 4em"></i>
+                    <h3>Get a quote</h3>
+                    <p>It’s easy—just follow these three steps:</p>
+                    <ul class="list-format">
+                        <li>1. Enter your ZIP code.</li>
+                        <li>2. Fill in your information.</li>
+                        <li>3. See the short term health plans.</li>
+                    </ul>
+                    <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Get Started</a>
                 </div>
 
-                <div class="column center-vertical-between">
-                    <i class="fab fa-wpforms 8em"></i>
-                    <h3>Fill Out Short Form</h3>
-                    <p>First, fill out this easy-to-answer questionnaire so we can gather information to find the most affordable healthcare option for you.</p>
-                    <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Learn More</a>
+                <div class="column center-vertical-between min-height-200">
+                   <i class="fas fa-hand-pointer 4em"></i>
+                    <h3>Pick the plan that fits you</h3>
+                    <p>Everyone is different, so it’s important to choose a health insurance plan that works for your lifestyle and your financial picture.</p>
+                    <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Find a plan</a>
                 </div>
 
-                <div class="column center-vertical-between">
-                    <i class="fas fa-network-wired 8em"></i>
-                    <h3>Get Connected</h3>
-                    <p>Our licensed agents will analyze and go over affordable health plan options while you sit back and relax.</p>
-                    <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Learn More</a>
-                </div>
-
-                <div class="column center-vertical-between">
-                    <i class="fas fa-heartbeat 8em"></i>
-                    <h3>Choose a Plan</h3>
-                    <p>Once our agents have carefully reviewed and discussed the perfect health plan option for you, all you need to do is make your selection.</p>
+                <div class="column center-vertical-between min-height-200">
+                    <i class="fas fa-thumbs-up 4em"></i>
+                    <h3>Get the most out of your plan.</h3>
+                    <p>Find easy-to-use tools and tips on how to use your benefits – all in one easy spot. </p>
                     <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Learn More</a>
                 </div>
 
@@ -82,11 +79,32 @@
         </section>
 
 
-        <section class="section deep-primary">
+        <section class="section">
+            <div class="grid set-cols-1">
+
+                <div class="column start-vertical-between">
+                    <h3>About this tool</h3>
+                    <p>This tool provides an easy way to compare health insurance quotes for individual health plans. Individual health insurance plans are policies you buy on your own, rather than through work. This tool shows plans that are offered through state and federal health insurance marketplaces. If you qualify for tax subsidies to lower your monthly payments, you must buy one of these plans to receive a subsidy.</p>
+                </div>
+
+                <div class="column start-vertical-between">
+                    <h3>What to look for in a health insurance plan</h3>
+                    <p>There’s more to comparing health insurance quotes than looking at premiums. Deductibles, copays and coinsurance might all be different, so you’ll want to take a close look at those out-of-pocket costs while you compare.</p>
+                    <br>
+                    <p><b>Look at the plan’s deductible — </b> how much you must pay out of pocket before the plan starts to pay a portion of the costs. This will appear next to the premium of any plan you look at. If someone on the plan goes to the emergency room or needs a lot of health care services, you’ll likely have to pay that amount toward care in the next year. For an emergency room visit or expensive treatment, you could be charged the deductible all at once, so there is a risk if you choose a plan with a high deductible.</p>
+                    <p><b>Pay special attention to prescription coverage</b> if someone in your family relies on a prescription medication. If that drug is an expensive one, you may have to pay full cost for it until the deductible is met, and a coinsurance percentage after that. Ask yourself: Would it be a better deal to pay a higher monthly premium in exchange for a flat copay each time you need to refill at the pharmacy?</p>
+                    <p><b>Check the plan’s provider network </b>to make sure there are doctors and hospitals near you who take that plan. If you go out of the network to receive care, you might have to pay full price, whether you knew you went to a non-network provider or not. If you have a doctor you like, also make sure he or she accepts your medical insurance plan.</p>
+                    <p>How much you pay when you go out of network and how many doctors are in your network will depend on which type of plan you get. Your plan type will also determine whether you need a referral from your primary doctor before you see a specialist.</p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="section deep-both-1">
             <div class="grid">
-                <div class="column text-white">
-                    <p>process is quick and easy, just click "Get Started" and you're on your way to affordable health coverage.</p><br>
-                    <a class="button is-large deep-white text-black" href="https://mystifying-hodgkin-910950.netlify.com/">Get Started</a>
+                <div class="column">
+                    <a class="button is-large"
+                        href="https://mystifying-hodgkin-910950.netlify.com/">Get Started</a>
                 </div>
             </div>
         </section>
@@ -95,7 +113,7 @@
 
     <footer id="footer"></footer>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 
