--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="grid set-cols-3">
 
                 <div class="column center-vertical-between min-height-200">
-                    <i class="fab fa-wpforms 4em"></i>
+                    <i class="fab fa-wpforms 4em text-shadow"></i>
                     <h3>Get a quote</h3>
                     <p>It’s easy—just follow these three steps:</p>
                     <ul class="list-format">
@@ -62,14 +62,14 @@
                 </div>
 
                 <div class="column center-vertical-between min-height-200">
-                   <i class="fas fa-hand-pointer 4em"></i>
+                   <i class="fas fa-hand-pointer 4em text-shadow"></i>
                     <h3>Pick the plan that fits you</h3>
                     <p>Everyone is different, so it’s important to choose a health insurance plan that works for your lifestyle and your financial picture.</p>
                     <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Find a plan</a>
                 </div>
 
                 <div class="column center-vertical-between min-height-200">
-                    <i class="fas fa-thumbs-up 4em"></i>
+                    <i class="fas fa-thumbs-up 4em text-shadow"></i>
                     <h3>Get the most out of your plan.</h3>
                     <p>Find easy-to-use tools and tips on how to use your benefits – all in one easy spot. </p>
                     <a class="link" href="https://mystifying-hodgkin-910950.netlify.com/">Learn More</a>
