--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <section class="section padd-64 deep-both-3">
             <div class="grid set-cols-1">
                 <div class="column header-title">
+                    <h1 class="connect">Health Insurance for Individuals & Families</h1>
                     <h1>Health Insurance for Individuals & Families</h1>
                 </div>
             </div>
