--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description"
         content="find-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
 
-    <title>Find Insurance Quotes</title>
+    <title>Find Insurance Quotes | Home</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption|PT+Serif" rel="stylesheet">
