--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Free Health Insurance Quotes">
 
     <meta name="description"
-        content="freehealth-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
+        content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
 
     <title>Free Health Insurance Quote | 404 Page</title>
 
@@ -42,24 +42,32 @@
                 <div class="column start-vertical-between">
                     <h1>404 Error: Page Not Found.</h1>
                     <ul>
-                        <li><h3>It could be for the following reasons.</h3></li>
-                        <li><p>1. Unvalid URL.</p></li>
-                        <li><p>2. Page is currently down</p></li>
-                        <li><p>3. Server is currently down</p></li>
+                        <li>
+                            <h3>It could be for the following reasons.</h3>
+                        </li>
+                        <li>
+                            <p>1. Unvalid URL.</p>
+                        </li>
+                        <li>
+                            <p>2. Page is currently down</p>
+                        </li>
+                        <li>
+                            <p>3. Server is currently down</p>
+                        </li>
                     </ul>
                 </div>
             </div>
         </section>
         <section class="section padd-64 deep-secondary">
-                <div class="grid set-cols-1">
-                    <div class="column start-vertical-between">
-                        <h1>Free Health Insurance Quotes</h1>
-                        <h3>But wait!.....we still can help you...</h3>
-                        <h3>Are you looking for an insurance quote?</h3>
-                        <a class="button" href="https://mystifying-hodgkin-910950.netlify.com/">Get a Quote</a>
-                    </div>
+            <div class="grid set-cols-1">
+                <div class="column start-vertical-between">
+                    <h1>Find Insurance Quotes</h1>
+                    <h3>But wait!.....we still can help you...</h3>
+                    <h3>Are you looking for an insurance quote?</h3>
+                    <a class="button" href="https://cheaphealthcareplan.com/">Get a Quote</a>
                 </div>
-            </section>
+            </div>
+        </section>
 
     </main>
 
