--- a/privacy.html
+++ b/privacy.html
@@ -12,11 +12,9 @@
 
     <meta name="author" content="Your Health Marketplace">
 
-    <meta name="description"
-        content="freehealth-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
+    <meta name="description" content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
 
     <title>Your Health Marketplace | Privacy Policy</title>
 
