--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,7 @@
 
     <meta name="author" content="Your Health Marketplace">
 
-    <meta name="description" content="freehealth-insurancequotes.com help individuals to find great online insurance quotes an affordable price">
+    <meta name="description" content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
@@ -45,7 +45,7 @@
 
         <nav id="navbar-empty">
             <span></span>
-            <h3 class="text-quaternary">Your Health Marketplace</h3>
+            <h3 class="text-quaternary">Find Insurance Quotes</h3>
         </nav>
 
         <section class="section deep-tertiary">
