add a new file3

--- a/404.html
+++ b/404.html
@@ -10,12 +10,11 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="author" content="Free Health Insurance Quotes">
+    <meta name="author" content="Find Insurance Quotes">
 
-    <meta name="description"
-        content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
+    <meta name="description" content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
 
-    <title>Free Health Insurance Quote | 404 Page</title>
+    <title>Find Insurance Quotes | 404 Page</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption|PT+Serif" rel="stylesheet">
