--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <meta name="author" content="Find Insurance Quotes">
 
-    <meta name="description"
-        content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
+    <meta name="description" content="find-insurancequotes.com helps individuals to find cheap health insurance quotes online. Find healthcare plans online at www.cheaphealthcareplan.com">
 
     <title>Find Insurance Quotes | Home</title>
 
