--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Your Health Marketplace | Term of Use</title>
+    <title>Find Insurance Quotes | Term of Use</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption|PT+Serif" rel="stylesheet">
