--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Your Health Marketplace | Privacy Policy</title>
+    <title>Find Insurance Quotes | Privacy Policy</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption|PT+Serif" rel="stylesheet">
